ros2_ws/log/build_2025-03-11_03-24-56/task_4/stderr.log
  File "/home/albert/ros2_ws/install/task_4/lib/python3.10/site-packages/task_4/auto_navigator.py", line 250
    print(f'current goal pose: {self.convertFrames(current_goal.pose.position.x, current_goal.pose.position.y, 'NodeToRviz')}')
                                                                                                                ^^^^^^^^^^
SyntaxError: f-string: unmatched '('

